--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "homepage": "https://github.com/Path-Of-Exile-Extensions",
   "private": false,
   "scripts": {
+    "dev": "vite build --watch",
     "build": "vite build"
   },
   "devDependencies": {
@@ -19,13 +20,13 @@
     "dist",
     "types"
   ],
-  "main": "./lib/index.umd.js",
-  "module": "./lib/index.es.js",
-  "types": "./lib/index.d.ts",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./lib/index.es.js",
-      "require": "./lib/index.umd.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.js"
     }
   }
 }
