--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": {
     "name": "POEL10N"
   },
+  "sideEfect": false,
   "homepage": "https://github.com/Path-Of-Exile-Extensions",
   "private": false,
   "scripts": {
@@ -13,7 +14,9 @@
   "devDependencies": {
     "tslib": "^2.5.0",
     "vite": "^4.3.6",
-    "vite-plugin-dts": "^2.3.0"
+    "vite-plugin-dts": "^2.3.0",
+    "typescript": "^5.0.4",
+    "chrome-types": "^0.1.194"
   },
   "files": [
     "package.json",
