--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "vite build --watch",
     "build": "vite build"
   },
+  "type": "module",
   "devDependencies": {
     "tslib": "^2.5.0",
     "vite": "^4.3.6",
