--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "build": "vite build"
   },
   "type": "module",
+  "dependencies": {
+    "webextension-polyfill": "^0.10.0"
+  },
   "devDependencies": {
     "tslib": "^2.5.0",
     "vite": "^4.3.6",
     "vite-plugin-dts": "^2.3.0",
     "typescript": "^5.0.4",
-    "chrome-types": "^0.1.194",
-    "@types/node": "18"
+    "@types/node": "18",
+    "@types/chrome": "^0.0.236",
+    "@types/webextension-polyfill": "^0.10.0"
+  },
+  "optionalDependencies": {
+    "webextension-polyfill": "^0.10.0"
   },
   "files": [
     "package.json",
