--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
-    "tslib": "^2.5.0",
-    "vite": "^4.3.6",
+    "tslib": "^2.5.2",
+    "vite": "^4.3.8",
     "vite-plugin-dts": "^2.3.0",
     "typescript": "^5.0.4",
     "@types/node": "18",
-    "@types/chrome": "^0.0.236",
+    "@types/chrome": "^0.0.237",
     "@types/webextension-polyfill": "^0.10.0"
   },
   "optionalDependencies": {
@@ -38,7 +38,11 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.unm.js"
+    },
+    "./ext": {
+      "import": "./dist/ext.js",
+      "require": "./dist/ext.unm.js"
     }
   }
 }
