--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
   },
   "include": ["src"]
 }
