--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": false,
   "scripts": {
     "dev": "vite build --watch & tsc -w",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
   "type": "module",
   "dependencies": {
@@ -22,7 +23,8 @@
     "typescript": "^5.0.4",
     "@types/node": "18",
     "@types/chrome": "^0.0.237",
-    "@types/webextension-polyfill": "^0.10.0"
+    "@types/webextension-polyfill": "^0.10.0",
+    "vitest": "^0.31.1"
   },
   "optionalDependencies": {
     "webextension-polyfill": "^0.10.0"
