--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
       "import": "./dist/browser.js",
       "require": "./dist/browser.unm.js",
       "types": "./dist/browser.d.ts"
+    },
+    "./l10n": {
+      "import": "./dist/l10n.js",
+      "require": "./dist/l10n.unm.js",
+      "types": "./dist/l10n.d.ts"
     }
   },
   "typesVersions": {
@@ -57,6 +62,9 @@
       ],
       "browser": [
         "dist/browser.d.ts"
+      ],
+      "l10n": [
+        "dist/l10n.d.ts"
       ]
     }
   }
