--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-dts": "^2.3.0",
-    "vitest": "^0.32.0"
+    "vitest": "^0.32.0",
+    "rxdb": "^14.14.0"
   },
   "optionalDependencies": {
-    "webextension-polyfill": "^0.10.0"
+    "webextension-polyfill": "^0.10.0",
+    "rxdb": "^14.14.0",
+    "rxjs": "^7.8.1"
   },
   "files": [
     "package.json",
@@ -54,6 +57,11 @@
       "import": "./dist/l10n.js",
       "require": "./dist/l10n.unm.js",
       "types": "./dist/l10n.d.ts"
+    },
+    "./repository": {
+      "import": "./dist/repository.js",
+      "require": "./dist/repository.unm.js",
+      "types": "./dist/repository.d.ts"
     }
   },
   "typesVersions": {
@@ -66,6 +74,9 @@
       ],
       "l10n": [
         "dist/l10n.d.ts"
+      ],
+      "repository": [
+        "dist/repository.d.ts"
       ]
     }
   }
